# synthr

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  midi.py  plot.py
gui/: CMakeLists.txt  Makefile  imgui.ini  juce_vst3_helper  main.cpp  opengl_component.h  render.cpp  render.h  render_wavenode.h
gui/imgui/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
gui/plugin_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h
gui/plugin_artefacts/JuceLibraryCode/Debug/: Defs.txt
gui/rtmidi/: rtmidi.cpp  rtmidi_c.cpp
gui/src/: CMakeLists.txt
gui/standalone_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h
gui/standalone_artefacts/JuceLibraryCode/Debug/: Defs.txt
include/: circbuf.h  defs.h  delay.h  effects.h  envelope.h  fft.h  filter.h  formant.h  karplus.h  midi.h  oscillators.h  queue.h  reverb.h  rng.h  serialize.h  threadpool.h  wavefile.h  wavegraph.h  wavetable.h
src/: cJSON.c  circbuf.c  delay.c  envelope.c  fft.c  filter.c  imgui.ini  main.c  main.rs  midi.c  oscillators.c  reverb.c  rng.c  serialize.c  wavegraph.c  wavetable.c
tests/: circbuf.c  circbuf.h  polyblep.c
